plugins {
	id "fabric-loom" version "1.4-SNAPSHOT"
	id "io.freefair.lombok" version "8.6"
}

sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16

archivesBaseName = project.archives_base_name
version = "${project.mod_version}-${project.build_game_version}"
group = project.maven_group

repositories {
	maven {
		url "https://jitpack.io"
	}
}

loom {
	accessWidenerPath = file("src/main/resources/twitchemotes.accesswidener")
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	include implementation(fileTree(dir: "lib", include: ["*.jar"]))

	include implementation(group: "net.java.dev.jna", name: "jna", version: project.jna_version)
	include implementation(group: "net.java.dev.jna", name: "jna-platform", version: project.jna_version)

	include implementation(group: "com.github.gikkman", name: "Java-Twirk", version: project.twirk_version)
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

java {
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}" }
	}
}
